$Id$

2008-10-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Added new --pcapsavefile (-C) option to allow
	  received TCP packets to be saved to a pcap file for later
	  analysis.

	* configure.ac: Improved checks for pcap library.

	* Minor code changes to improve portability.

2008-10-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: incremented version number to 1.16.
	  First beta test version for DK, DC & AP.

	* tarball: tcp-scan-1.16.tar.gz
	  Size: 167,451 MD5: 9fa6ea49e2648cba49a94a61ccadcfbe

2008-07-11 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Removed reference to RMIF environment variable.
	  tcp-scan now uses the value specified with --interface, or
	  if that is not specified, picks an interface with
	  pcap_lookupdev().

2008-02-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Improved get_source_ip function: close socket descriptor
	  after use, and give better error message if the interface has no
	  IP address.

	* tcp-scan.c: Added new --port (-p) option to replace the now
	  depreciated --data (-D) option.

	* tcp-scan.c: Modified usage() so that it can output either brief or
	  detailed help output depending on a new "detailed" argument.  Now,
	  detailed output, including information on the available options, is
	  only displayed when ike-scan is run with the --help option.  For
	  error conditions such as incorrect options, it only produces brief
	  output.

	* tcp-scan.c: Added --servicefile2 (-E) option to allow the TCP service
	  filename to be specified.

	* configure.ac: Increment version number to 1.15.

2008-02-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, tcp-scan.h: Add Posix regular expression support with
	  header file regex.h.

	* configure.ac: Increment version number to 1.14.

	* tcp-scan.c: Improved algorithm to create port name map from
	  services file.  This new algorithm uses Posix regex functions.

	* tcp-scan-services: Improved port list in services file.
